# crabjuice

./: Cargo.toml  README.md
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: lib.rs
crates/examples/basic_gain/: Cargo.toml
crates/examples/basic_gain/src/: main.rs
crates/examples/real_audio/: Cargo.toml
crates/examples/real_audio/src/: lib.rs
crates/midi/: Cargo.toml
crates/midi/src/: lib.rs
