[package]
name = "crabjuice-audio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Audio buffer and processor traits for crabjuice."

[dependencies]
crabjuice-midi = { path = "../midi" }

[lib]
name = "crabjuice_audio"
path = "src/lib.rs"

