[package]
name = "crabjuice-dsp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DSP processors for crabjuice."

[dependencies]
crabjuice-audio = { path = "../audio" }
crabjuice-core = { path = "../core" }

[lib]
name = "crabjuice_dsp"
path = "src/lib.rs"

