[package]
name = "basic_gain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
crabjuice-audio = { path = "../../audio" }
crabjuice-dsp = { path = "../../dsp" }

[[bin]]
name = "basic_gain"
path = "src/main.rs"

