[package]
name = "real_audio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow = "1"
cpal = "0.15"
crabjuice-audio = { path = "../../audio" }
crabjuice-dsp = { path = "../../dsp" }
crossterm = "0.27"
hound = "3.5"
ratatui = "0.26"
ringbuf = "0.3"

[lib]
name = "real_audio"
path = "src/lib.rs"

[[bin]]
name = "live_gain"
path = "src/bin/live_gain.rs"

[[bin]]
name = "live_tui"
path = "src/bin/live_tui.rs"

[[bin]]
name = "wav_gain"
path = "src/bin/wav_gain.rs"
